--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-See the ./doc/source/index.html for more informations.
+See the `Documentation <http://github.com/ksamuel/Direct-SMS/blob/master/doc/source/index.rst>`_ for more informations.
