Changing the Readme cause github rst parsing doesn't work as I expected

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-See the `Documentation <http://github.com/ksamuel/Direct-SMS/blob/master/doc/source/index.rst>`_ for more informations.
+See the documentation (./doc/source/index.rst) for more informations.
